[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Building.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Shack.gd" type="Script" id=2]
[ext_resource path="res://scenes/UI/Inventory.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/UI/Templates/InventorySlot.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/LightNight.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/Frames/Shack_day.tres" type="SpriteFrames" id=6]

[node name="Shack" instance=ExtResource( 1 )]
script = ExtResource( 2 )
ui_inventory_path = NodePath("Inventory")

[node name="Sprite" parent="." index="0"]
visible = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="1"]
frames = ExtResource( 6 )

[node name="LightNight" parent="." index="3" instance=ExtResource( 5 )]

[node name="Inventory" parent="." index="4" instance=ExtResource( 3 )]
visible = false
margin_left = -50.5
margin_top = 68.0
margin_right = 529.5
margin_bottom = 758.0
rect_scale = Vector2( 0.6, 0.6 )
Slot = ExtResource( 4 )

[connection signal="clicked_on_building" from="." to="." method="_on_Shack_clicked_on_building"]
[connection signal="ui_btn_pressed" from="." to="." method="_on_Shack_ui_btn_pressed"]
[connection signal="closed" from="Inventory" to="." method="_on_Inventory_closed"]
[connection signal="pressed_slot" from="Inventory" to="." method="_on_Inventory_pressed_slot"]
